unpackaged/main/default/objects/Business_Unit__c/fields/Account_BU__c.field-meta.xml
<CustomField>
    <fullName>Account_BU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Units</relationshipLabel>
    <relationshipName>Business_Units_Account</relationshipName>
    <type>Lookup</type>
</CustomField>