unpackaged/main/default/objects/Business_Unit__c/fields/Account_Status_BU__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_BU__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>