unpackaged/main/default/objects/Business_Unit__c/fields/API_Code__c.field-meta.xml
<CustomField>
    <fullName>API_Code__c</fullName>
    <externalId>true</externalId>
    <label>API Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>