unpackaged/main/default/objects/Business_Unit__c/fields/BusinessUnitAssistantManager__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitAssistantManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit Assistant Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BuAssistantManager</relationshipName>
    <type>Lookup</type>
</CustomField>