unpackaged/main/default/objects/Business_Unit__c/fields/BusinessUnitManager__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BuManager</relationshipName>
    <type>Lookup</type>
</CustomField>