unpackaged/main/default/objects/Business_Unit__c/fields/BusinessUnitPsManager__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitPsManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit PS Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BuPsManager</relationshipName>
    <type>Lookup</type>
</CustomField>