unpackaged/main/default/objects/Business_Unit__c/fields/Cfo__c.field-meta.xml
<CustomField>
    <fullName>Cfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BuCfo</relationshipName>
    <type>Lookup</type>
</CustomField>