unpackaged/main/default/objects/Business_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>API_Code__c</columns>
    <columns>BU__c</columns>
    <columns>BusinessUnitAssistantManager__c</columns>
    <columns>BusinessUnitManager__c</columns>
    <columns>BusinessUnitPsManager__c</columns>
    <columns>Cfo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>